# copilot-rust

./: README.md
copilot-rust/: CHANGELOG  README.md  copilot-rust.cabal
copilot-rust/src/Copilot/Compile/: Rust.hs
copilot-rust/src/Copilot/Compile/Rust/: CodeGen.hs  Compile.hs  Error.hs  Expr.hs  External.hs  Name.hs  Settings.hs  Type.hs
