cabal-version             : >= 1.10
name                      : copilot-rust
version                   : 3.17
synopsis                  : A compiler for Copilot targeting rust.
description               :
  This package is a back-end from Copilot to rust, based on the original
  compiler from Copilot to C99.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

license                   : BSD3
license-file              : LICENSE
maintainer                : Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage                  : https://copilot-language.github.io
bug-reports               : https://github.com/Copilot-Language/copilot/issues
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md
                          , CHANGELOG

author                    : Frank Dedden
                          , Alwyn Goodloe
                          , Ivan Perez

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot-rust.git
    subdir:     copilot-rust

library
  default-language        : Haskell2010
  hs-source-dirs          : src

  ghc-options             : -Wall
  build-depends           : base                >= 4.9 && < 5
                          , directory           >= 1.3 && < 1.4
                          , filepath            >= 1.4 && < 1.5
                          , mtl                 >= 2.2 && < 2.4
                          , pretty              >= 1.1 && < 1.2

                          , copilot-core        >= 3.17  && < 3.18
                          , language-c99        >= 0.2.0 && < 0.3
                          , language-c99-simple >= 0.2.2 && < 0.3

  exposed-modules         : Copilot.Compile.Rust

  other-modules          : Copilot.Compile.Rust.Expr
                         , Copilot.Compile.Rust.Type
                         , Copilot.Compile.Rust.Error
                         , Copilot.Compile.Rust.Name
                         , Copilot.Compile.Rust.CodeGen
                         , Copilot.Compile.Rust.External
                         , Copilot.Compile.Rust.Compile
                         , Copilot.Compile.Rust.Settings
